Minor fix on emoji photobooth gutter spacing.

--- a/static/css/memoji.css
+++ b/static/css/memoji.css
@@ -54,6 +54,10 @@ body {
     opacity: 0.3;
 }
 
+#session-photos .emoji {
+  margin-top: 44px;
+}
+
 .emoji img {
     width: 100%;
     height: 100%;
